arreglando errores con rutas

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>montego' s home</title>
-    <link rel="icon" href="/montego's_fovicon.png" type="image/png">
+    <link rel="icon" href="montego's_fovicon.png" type="image/png">
     <link rel="stylesheet" href="montego's.css">
     <link rel="stylesheet" href="fonts.css">
 </head>
 <body>
 
     <header>
-        <img src="/montego's_logo.png" alt="logotipo" class="logo">
+        <img src="montego's_logo.png" alt="logotipo" class="logo">
         <nav class="links__nav">
             <a class="links" href="index.html">inicio</a>
             <a class="links" href="nosotros.html">nosotros</a>
