--- a/productos.html
+++ b/productos.html
@@ -23,90 +23,92 @@
 
     <h1 class="products__title">Nuestros mejores platillos</h1>
     <div class="first__row">
-        <a href="" class="food__links">
-            <div class="food__container">
+        <div class="food__container">
+            <a href="" class="food__links">
                 <img src="dorada con salsa calabrese y gnocchis trufados.webp" class="products">
                 <h3>Dorada con salsa calabrese y gnocchis trufados</h3>
                 <p>con esparragos salteados</p>
                 <h4>$180</h4>
-            </div>
-        </a>
+            </a>
+        </div>
 
-        <a href="" class="food__links">
-            <div class="food__container">
-                <img src="dorada con salsa de matequilla nantes.webp" alt="">
+        <div class="food__container">
+            <a href="" class="food__links">
+                <img src="dorada con salsa de matequilla nantes.webp" class="products">
                 <h3>Dorada con salsa de mantequilla nantes</h3>
                 <p>con patatas al horno y ensalada</p>
                 <h4>$185</h4>
-            </div>
-        </a>
+            </a>
+        </div>
 
-        <a href="" class="food__links">
-            <div class="food__container">
-                <img src="entrecote de ternera con pastel de patatas.webp" alt="">
+        <div class="food__container">
+            <a href="" class="food__links">
+                <img src="entrecote de ternera con pastel de patatas.webp" class="products">
                 <h3>Entrecote de ternera con pastel de patatas</h3>
                 <p>con salsa casera de mostaza y brocoli salteado</p>
                 <h4>$160</h4>
-            </div>
-        </a>
+            </a>
+        </div>
     </div>
 
     <div class="second__row">
-        <a href="" class="food__links">
-            <div class="food__container">
-                <img src="pato a la naranja.webp" alt="">
+        <div class="food__container">
+            <a href="" class="food__links">
+                <img src="pato a la naranja.webp" class="products">
                 <h3>Pato a la naranja</h3>
                 <p>acompañado de patatas al romero y judías verdes salteados</p>
                 <h4>$205</h4>
-            </div>
-        </a>
+            </a>
+        </div>
 
-        <a href="" class="food__links">
-            <div class="food__container">
-                <img src="solomillo de cerdo con girgolas salteadas.webp" alt="">
+        <div class="food__container">
+            <a href="" class="food__links">
+                <img src="solomillo de cerdo con girgolas salteadas.webp" class="products">
                 <h3>Solomillo de cerdo con girgolas salteadas</h3>
                 <p>con salsa asiática y ensalada con cacahuetes</p>
                 <h4>$190</h4>
-            </div>
-        </a>
+            </a>
+        </div>
 
-        <a href="" class="food__links">
-            <div class="food__container">
-                <img src="solomillo de cerdo con salsa cremosa de setas.webp" alt="">
+        <div class="food__container">
+            <a href="" class="food__links">
+                <img src="solomillo de cerdo con salsa cremosa de setas.webp" class="products">
                 <h3>Solomillo de cerdo con salsa cremosa de setas</h3>
                 <p>acompañado de arroz y judías verdes salteadas</p>
                 <h4>$230</h4>
-            </div>
-        </a>
+            </a>
+        </div>
     </div>
 
     <div class="last__row">
-        <a href="" class="food__links">
-            <div class="food__container">
-                <img src="solomillo de cerdo con salsa demiglace.webp" alt="">
+        <div class="food__container">
+            <a href="" class="food__links">
+                <img src="solomillo de cerdo con salsa demiglace.webp" class="products">
                 <h3>Solomillo de cerdo con salsa demiglace</h3>
                 <p>con patatas gratinadas al queso azul y judías verdes y espinacas</p>
                 <h4>$250</h4>
-            </div>
-        </a>
+            </a>
+        </div>
 
-        <a href="" class="food__links">
-            <div class="food__container">
-                <img src="solomillo de cerdo oriental con setas shiitake.webp" alt="">
+        <div class="food__container">
+            <a href="" class="food__links">
+                <img src="solomillo de cerdo oriental con setas shiitake.webp" class="products">
                 <h3>Solomillo de cerdo oriental con setas shiitake</h3>
                 <p>acompañado de arroz con pimiento y cacahuetes</p>
                 <h4>$230</h4>
-            </div>
-        </a>
+            </a>
+        </div>
 
-        <a href="" class="food__links">
-            <div class="food__container">
-                <img src="Yakiniku entrecot de ternera con salsa japonesa.webp" alt="">
+        
+        <div class="food__container">
+            <a href="" class="food__links">
+                <img src="Yakiniku entrecot de ternera con salsa japonesa.webp" class="products">
                 <h3>Yakiniku entrecot de ternera con salsa japonesa</h3>
                 <p>con verduras salteadas y patatas aderezandas</p>
                 <h4>$300</h4>
-            </div>
-        </a>
+            </a>
+        </div>
+        
     </div>
 
 <footer>
